[B] Fix backend content block UI bugs
* Fixes issue with blocks lacking padding while dragging
* Replaces dropzone border color with background color
* Fixes regression in block heading layout
* Better centers block titles vertically
* Fixes some layout issues in IE11
* Fixes a bug with current blocks not dragging in IE11

--- a/client/src/theme/Components/backend/project/_content-block-list.scss
+++ b/client/src/theme/Components/backend/project/_content-block-list.scss
@@ -1,17 +1,18 @@
 // a layout class for vertically stacking blocks. that's it!
 .content-block-list {
+  $list-margin: 9px;
+
   @include panelRounded;
   display: block;
   min-height: 68px;
-  margin-top: 25px;
+  padding: 0 $list-margin;
+  margin-top: 16px;
+  margin-right: -$list-margin;
+  margin-left: -$list-margin;
   background-color: transparent;
-  transition: border 0.2s ease;
+  transition: background-color 0.4s ease;
 
   &--show-dropzone {
-    border: 1px solid $accentPrimary;
-  }
-
-  > * + * {
-    margin-top: 18px;
+    background-color: lighten($neutral90, 5%);
   }
 }
